# Improvements

./: README.md
1.Project1/: CMakeLists.txt  README.md  main.cpp
2.Project2/: CMakeLists.txt  README.md  appwrapper.cpp  appwrapper.h  datasource.cpp  datasource.h  joke.cpp  joke.h  jokemodel.cpp  jokemodel.h  main.cpp
